    shuffling them based on dictionary ordering (LP: #770711).  This uses
    collections.OrderedDict, which requires Python >= 2.7.
  * Run only those parts of oem-config-prepare that require root access as
    root; in particular displaying confirmation dialogs is now done as the
    calling user, which avoids KDE confusion (LP: #856418).

  [ Stéphane Graber ]
  * Set gsettings keys in ubiquity-dm instead of gconf for these that
    have been migrated.

 -- Stéphane Graber <stgraber@ubuntu.com>  Mon, 03 Oct 2011 13:04:26 -0400

ubiquity (2.8.1) oneiric; urgency=low

  * Build-depend on gir1.2-soup-2.4 for timezone tests.
  * Update translations from Launchpad.
  * Update imported translations from gtk+3.0 3.2.0-0ubuntu1 and gnome-panel
    1:3.2.0-0ubuntu1.

 -- Colin Watson <cjwatson@ubuntu.com>  Sat, 01 Oct 2011 23:20:53 +0100

ubiquity (2.8.0) oneiric; urgency=low

  * Fix SSID UTF-8 decoding, and replace any still-invalid characters with
    the Unicode replacement character just in case (LP: #839143).
  * GTK frontend:
    - Fetch geoname data asynchronously (LP: #837217).
  * Always start oem-config with LANG=en_US.UTF-8; this doesn't affect
    translations since we use debconf for those, but forces Qt to use UTF-8
    encoding for text fields (LP: #837042).

 -- Colin Watson <cjwatson@ubuntu.com>  Sat, 01 Oct 2011 20:44:44 +0100

ubiquity (2.7.38) oneiric; urgency=low

  [ Mario Limonciello ]
  * Preseed a bootloader target if one hasn't been set but running in 
    automatic mode. (LP: #861465)

  [ Adam Conrad ]
  * Allow fallback from oem-config-slideshow to ubiquity-slideshow for
    cases where the former doesn't exist.
  * Automatic update of included source packages: console-setup
    1.57ubuntu27, flash-kernel 2.28ubuntu34, grub-installer 1.68ubuntu4,
    netcfg 1.68ubuntu6.  Fixes FTBFS.

  [ Evan Dandrea ]
  * Use the default signal handler for SIGPIPE, hopefully fixing the
    child processes of update-apt-cache not getting killed along with