@@ -1,4 +1,5 @@
 #!/bin/sh
+set -e
 mkdir -p /target/var/cache/apt/archives
 mkdir -p /target/var/cache/apt/archives/partial
 apt-get update
